vergeten woensdag, versie naar pavel
er is tekst bijgekomen!

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -132,6 +132,12 @@
   class = abbr
 }
 
+\DeclareAcronym{comp}{
+  short = \tsc{comp} ,
+  long  = complementizer ,
+  class = abbr
+}
+
 
 \DeclareAcronym{ohg}{
   short = OHG ,
