--- a/introduction.tex
+++ b/introduction.tex
@@ -23,23 +23,23 @@ The grammatical roles of the noun phrases in \ref{ex:germancase} can also be der
 
 \ex.\label{ex:germancase}
 \ag. Der Lehrer mag den Schüler.\\
- the.\tsc{nom} teacher likes the.\tsc{acc} student\\
+ the.\ac{nom} teacher likes the.\ac{acc} student\\
  `The teacher likes the pupil.'\label{ex:germancase1}
 \bg. Der Schüler mag den Lehrer.\\
- the.\tsc{nom} student likes the.\tsc{acc}\\
+ the.\ac{nom} student likes the.\ac{acc}\\
  `the pupil likes the teacher.'\label{ex:germancase2}
 
 Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both consist of a main clause that is modified by a relative clause, which is placed between brackets.
-In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\tsc{nom}' is assigned nominative case, because it is the subject of in the relative clause.
+In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' is assigned nominative case, because it is the subject of in the relative clause.
 
-In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\tsc{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:germanrelatives}
 \ag. Der Lehrer mag den Schüler, [der nach draußen guckt].\\
- the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{nom} to outside looks\\
+ the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
  `The teacher likes the pupil that is looking outside.'\label{ex:germanrelative1}
  \bg. Der Lehrer mag den Schüler, [den er beim Verstecktspiel sucht].\\
- the.\tsc{nom} teacher likes the.\tsc{acc} student that.\tsc{acc} he {at the} {hide-and-seek game} searches\\
+ the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
 
 Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head, it is nominative.
@@ -55,25 +55,25 @@ The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Theref
 }
 
 \exg. gaarma [þan -ei arma]\\
- pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
 Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
 In the remainder of this section I show evidence for the claim that there is case competition going on in headless relatives. I illustrate that relative pronouns can take the case assigned from within the relative clause or the case assigned from outside the relative clause (the main clause).
 
-Consider the example in \ref{ex:gothicaccdat}. In this example there is a subscript on a preposition, indicating that this is the element that assigns the case. The relative clause is placed between squared brackets. The preposition \tit{ana} `on' is part of the relative clause, and it assigns dative case. The predicate \tit{ushafjands} `picking up' is not part of the relative clause but it is situated in the main clause. This predicate assigns accusative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the preposition \tit{ana} `on', which is part of the relative clause.
+Consider the example in \ref{ex:gothicaccdat}. In this example there is a subscript on a preposition, indicating that this is the element that assigns the case. The relative clause is placed between square brackets. The preposition \tit{ana} `on' is part of the relative clause, and it assigns dative case. The predicate \tit{ushafjands} `picking up' is not part of the relative clause but it is situated in the main clause. This predicate assigns accusative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the preposition \tit{ana} `on', which is part of the relative clause.
 
-\exg. ushafjands [ana þamm -ei lag]\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
+\exg. [ ushafjands [ ana þamm -ei lag ] ]\\
+ \phantom{x} {picking up} \phantom{x} on what.\ac{dat} -\ac{comp} lay \scsub{[dat]} \scsub{[acc]}\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
 
 The conclusion that follows is that in headless relatives the relative pronoun can take the case assigned within the relative clause. At this point it remains unclear what happened to the accusative case which is assigned by the predicate in the main clause.
 
-Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed between squared brackets. The predicate \tit{qiþiþ} `say' is part of the relative clause, and assigns accusative case. The predicate \tit{taujau} `do' is not part of the relative clause but it is situated in the main clause. This predicate assign dative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the predicate \tit{taujau} `do', which is part of the main clause.
+Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed between square brackets. The predicate \tit{qiþiþ} `say' is part of the relative clause, and assigns accusative case. The predicate \tit{taujau} `do' is not part of the relative clause but it is situated in the main clause. This predicate assign dative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the predicate \tit{taujau} `do', which is part of the main clause.
 
 \exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
- what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
+ what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatacc}
 
 The conclusion that follows is that in headless relatives the relative pronoun takes the case assigned in the main clause. Again, it is unclear at this point what happened to the accusative case, which is now assigned by the predicate in the relative clause.
