--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -2,72 +2,50 @@
 
 \chapter{A reoccurring pattern}
 
-Start with the main focus of this dissertation
-A phenomenon goes parallel with the ordering
+First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives in Gothic adhere to the case strength scale: \ac{nom} < \ac{acc} < \ac{dat}.
+
+Then I show two phenomena that follow the same ordering of \ac{nom}, \ac{acc} and \ac{dat}. The two phenomena are accessibility hierarchies. The first one is about agreement, the second one about relativization.
+
+In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat} pattern in morphology.
 
 
 \section{Case competition in Gothic headless relatives}
 
-In the introduction I already showed accusative vs. dative, and dative always won. Here I additionally add nominative. I will show that ordering of strength is nom-acc-dat.
+In this section I show the behavior of Gothic headless relatives in detail. I systematically go through all case combinations, except for the genitive, which I discuss in Section \ref{sec:genitive}. This leaves the nominative, accusative and dative.
 
-First some terminology.
-Intern
-Extern
-
-\begin{table}[H]
-  \center
-  \caption {Case attraction in headless relatives - empty}
-    \begin{tabular}{c|c|c|c}
-      \toprule
-        \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
-            & [\ac{nom}]
-            & [\ac{acc}]
-            & [\ac{dat}]
-            \\ \cmidrule{1-4}
-        [\ac{nom}]
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            \\ \cmidrule{1-4}
-        [\ac{acc}]
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            \\ \cmidrule{1-4}
-        [\ac{dat}]
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
-            \\
-      \bottomrule
-    \end{tabular}
-\end{table}
-
-
-\subsection{matching}
-
-\exg. ei [sa -ei þis matjai,] ni gadauþnai\\
- that who.\ac{acc} -\tsc{comp} of this eats\scsub{[nom]} not die\scsub{[nom]}\\
- `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+I repeat the headless relative from the introduction in which both predicates assign accusative case in \ref{ex:gothicaccaccrep}. The predicate in the relative clause \tit{arma} `pity' assigns accusative case. The predicate in the main clause \tit{gaarma} `pity' also assigns accusative case. The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.
 
 \exg. gaarma [þan -ei arma]\\
- pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
- `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+
+From this section on I use the terms internal case and external case. Internal case refers to the case assigned internal to the relative clause. In \ref{ex:gothicaccaccrep}, the internal case is assigned by \tit{arma} `pity'. The external case refers to the case assign external to the relative clause, so the main clause. In \ref{ex:gothicaccaccrep}, the external case is assigned by \tit{gaarma} `pity'.
+
+I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
+
+In this example the predicate \tit{matjai} `eats' combines with a nominative subject in the relative clause. In other words, the internal case is nominative. The predicate \tit{gadauþnai} `die' in the main clause also combines with a nominative subject. In other words, the external case is nominative. The relative pronoun \tit{sa} `who.\tsc{nom}' appears in nominative case.
+
+\exg.[ei [sa -ei þis matjai,] ni gadauþnai]\\
+ that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
+ `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+
+In the examples below, the internal case and external case are dative.
 
 \ex.
 \ag. [þamm -ei gabaur] gabaur\\
- who.\ac{dat} -\tsc{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+ who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
  `tribute to (him) whom tribute is due'
 \bg. [þamm -ei mota] mota\\
- who.\ac{dat} -\tsc{comp} custom\scsub{[dat]} custom\scsub{[dat]}\\
+ who.\ac{dat} -\ac{comp} custom\scsub{[dat]} custom\scsub{[dat]}\\
  `custom to (him) whom custom is due'
 \bg. [þamm -ei agis] agis\\
- who.\ac{dat} -\tsc{comp} fear\scsub{[dat]} fear\scsub{[dat]}\\
+ who.\ac{dat} -\ac{comp} fear\scsub{[dat]} fear\scsub{[dat]}\\
  `fear to (him) whom fear is due'
 \bg. [þamm -ei sweriþa] sweriþa\\
- who.\ac{dat} -\tsc{comp} honour\scsub{[dat]} honour\scsub{[dat]}\\
+ who.\ac{dat} -\ac{comp} honour\scsub{[dat]} honour\scsub{[dat]}\\
  `honour to (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatdat}
 
+Schematically, this looks like:
 
 \begin{table}[H]
   \center
@@ -98,69 +76,79 @@ Extern
     \end{tabular}
 \end{table}
 
+In what follows I discuss the pattern that occurs when the internal and external case differs.
 
+Internal case is nominative, external case is accusative.
 
-
-
-\subsection{non-matching}
-
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
-\ag. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
- and what.\ac{acc} -\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+\exg. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
+ and what.\ac{acc} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
 
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
-\ag. [þaim -ei iupa sind] fraþjaiþ\\
- what.\ac{dat} -\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+Internal case is nominative, external case is dative.
+
+\exg. [þaim -ei iupa sind] fraþjaiþ\\
+ what.\ac{dat} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}
 
-\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
-\ag. [þan -ei frijos] siuks ist\\
- who.\ac{acc} -\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+Internal case is accusative, external case is nominative.
+
+\exg. [þan -ei frijos] siuks ist\\
+ who.\ac{acc} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
 
-\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-\ag. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
- what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
+Internal case is accusative, external case is dative.
+
+\exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
 
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
-\ag. iþ [þamm -ei leitil fraletada] leitil frijod\\
- but who.\ac{dat} -\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
+Internal case is dative, external case is nominative.
+
+\exg. iþ [þamm -ei leitil fraletada] leitil frijod\\
+ but who.\ac{dat} -\ac{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}
 
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
-\ag. ushafjands [ana þamm -ei lag]\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
- `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
+Internal case is dative, external case is accusative.
 
+\ex. ushafjands [ana þamm -ei lag]\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
+ `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
 
 \footnote{Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that they examples are ungrammatical.}
 
 \input{tables/gothic-grammaticality.tex}
 
-\ex. \ac{nom} - \ac{acc} - \ac{dat}
+\ex.
+\a. \tsc{acc} wins over \tsc{nom}
+\b. \tsc{dat} wins over \tsc{nom}
+\b. \tsc{dat} wins over \tsc{acc}
 
-\phantom{nom}
+
+\section{Parallels in accessibility hierarchies}
 
 
-
-\section{The accessibility hierarchy}
 
 \subsection{Agreement}
+
+Moravcsik, Gilligan sub, obj, ind obj
+
+Bobaljik default/dependent/dative
+
+Mandarin Chinese does not show any agreement on the verb. In German, the verb agrees with the subject. In Huallaga Quechua, the verb agrees with the subject and the object. In Basque, the verb agrees with the subject, the object and the indirect object.
+
 
 \ex.
 \ag. Nǐ bǎ shū gěi wǒ-le.\\
  you ba book give me-\ac{asp}\\
  `You gave me the book.' \flushfill{Mandarin Chinese}
 \bg. Du gib -st mir das Buch.\\
- you give -\tbf{2\tsc{sg}} me the book\\
+ you give -\tbf{2\ac{sg}} me the book\\
  `You give me the book.' \flushfill{German}
 \bg. tayta-yki qam-ta qu -maran\\
- father-your you-\ac{acc} give -\tbf{3\tsc{sg}→1\tsc{sg}}.\ac{pst}\\
+ father-your you-\ac{acc} give -\tbf{3\ac{sg}→1\ac{sg}}.\ac{pst}\\
  `Your father gave you to me.' \flushfill{Huallaga Quechua, \pgcitealt{weber1983}{21}}
 \bg. Zu-k ni-ri liburu-a emon d -austa -zu.\\
- you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{acc} given \tbf{\ac{acc}.3\tsc{sg}} \tbf{-\ac{dat}.1\tsc{sg}} \tbf{-\ac{erg}.2\tsc{sg}}\\
+ you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{acc} given \tbf{\ac{acc}.3\ac{sg}} \tbf{-\ac{dat}.1\ac{sg}} \tbf{-\ac{erg}.2\ac{sg}}\\
  `You gave me the book.' \flushfill{Basque, \pgcitealt{arregi2004}{45}}
 
 \begin{table}[H]
@@ -230,6 +218,11 @@ Extern
 
 \subsection{Relativization}
 
+Keenan Comrie sub/obj/ind obj
+
+Caha nom/acc/dat
+
+In Malagasy, only subjects can be relativized.
 
 \ex.
 \ag. Nahita ny vehivavy ny mpianatra.\\
@@ -242,6 +235,8 @@ Extern
  the woman that saw the student\\
  `the woman that the student saw' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}}
 
+Objects can be passivized and then relativized (again relativization of a subject).
+
 \ex.
 \ag. Nohitan' ny mpianatra ny vehivavy.\\
  seen.\ac{pass} the student the woman\\
@@ -250,13 +245,13 @@ Extern
  the woman that seen.\ac{pass} the student\\
  `the woman that was seen by the student' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}}
 
-
-
-
+In Malay, subjects and objects can be relativized using \tit{yang}. Below I only give an example of a relativized object.
 
 \exg. Ali bunoh ayam yang Aminah sedang memakan.\\
  Ali kill chicken that Aminah \ac{prog} eat\\
  `Ali killed the chicken that Aminah is eating.' \flushfill{Malay, \pgcitealt{keenan1977}{71}}
+
+Indirect objects cannot be relativized in the same way.
 
 \ex.
 \ag. Ali beri {ubi kentang} itu kapada perempuan itu.\\
@@ -267,12 +262,13 @@ Extern
 \bg. *perempuan kapada yang Ali beri {ubi kentang} itu\\
  woman to who Ali give potato that\\ \flushfill{Malay, \pgcitealt{keenan1977}{71}}
 
+A different construction is made.
+
 \exg. perempuan yang menerima {ubi kentang} itu daripada Ali\\
  woman that received potato the from Ali\\
  `the woman that received the potato from Ali'\flushfill{Malay, \pgcitealt{keenan1977}{71}}
 
-
-
+In Basque, subjects, objects and indirect objects can be relativized with the same strategy.
 
 \ex.
 \ag. Gizon-a-k emakume-a-ri liburu-a eman dio.\\
@@ -282,7 +278,7 @@ Extern
  woman-\ac{def}-\ac{dat} book-\ac{def}.\ac{acc} give has-\ac{rel} man-\ac{def}\\
  `the man who has given the book to the woman'
 \bg. gizon-a-k emakume-a-ri eman dio-n liburu-a\\
- man-\ac{def}-\ac{erg} woman-\ac{def}-\tsc{dat} give has-\ac{rel} book-\ac{def}\\
+ man-\ac{def}-\ac{erg} woman-\ac{def}-\ac{dat} give has-\ac{rel} book-\ac{def}\\
  `the book that the man has given to the woman'
 \bg. gizon-a-k liburu-a eman dio-n emakume-a\\
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{acc} give has-\ac{rel} woman-\ac{def}\\
@@ -328,7 +324,7 @@ Extern
 
 
 
-\section{Case in morphology}
+\section{Behavior of the cases in morphology}
 
 
 \subsection{Suppletion patterns}
@@ -339,9 +335,9 @@ Extern
     \begin{tabular}{cccccccc}
       \toprule
           \multicolumn{3}{c}{pattern}
-            & \tsc{nom}
-            & \tsc{acc}
-            & \tsc{dat}
+            & \ac{nom}
+            & \ac{acc}
+            & \ac{dat}
             & translation
             & language \\
       \cmidrule(lr){1-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7} \cmidrule(lr){8-8}
@@ -349,25 +345,25 @@ Extern
             & \cellcolor{LG}\tbf{þ}ú
             & \cellcolor{LG}\tbf{þ}ig
             & \cellcolor{LG}\tbf{þ}ér
-            & 2\tsc{sg}
+            & 2\ac{sg}
             & Icelandic \\
           A & B & B
             & my
             & \cellcolor{LG}\tbf{n}as
             & \cellcolor{LG}\tbf{n}am
-            & 1\tsc{pl}
+            & 1\ac{pl}
             & Russian \\
           A & A & B
             & \cellcolor{LG}\tbf{narnaj}
             & \cellcolor{LG}\tbf{narnaj}(j)i
             & gunga
-            & 3\tsc{sg}
+            & 3\ac{sg}
             & Wardaman \\
           A & B & C
             & zɨ
             & jä
             & as(ɨr)
-            & 1\tsc{sg}
+            & 1\ac{sg}
             & Khinalugh \\
           A & B & A
             & \cellcolor{LG}
@@ -391,9 +387,9 @@ Extern
     \begin{tabular}{cccccccc}
       \toprule
           \multicolumn{3}{c}{pattern}
-            & \tsc{nom}
-            & \tsc{acc}
-            & \tsc{dat}
+            & \ac{nom}
+            & \ac{acc}
+            & \ac{dat}
             & translation
             & language \\
       \cmidrule(lr){1-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7} \cmidrule(lr){8-8}
@@ -401,25 +397,25 @@ Extern
             & \cellcolor{LG}\tbf{inu}
             & \cellcolor{LG}\tbf{inu}
             & \cellcolor{LG}\tbf{inu}
-            & 2\tsc{pl}
+            & 2\ac{pl}
             & Lavukaleve \\
           A & B & B
             & ta
             & \cellcolor{LG}\tbf{bor}
             & \cellcolor{LG}\tbf{bor}
-            & 1\tsc{pl}
+            & 1\ac{pl}
             & Teribe \\
           A & A & B
             & \cellcolor{LG}\tbf{sie}
             & \cellcolor{LG}\tbf{sie}
             & ihr
-            & 3\tsc{sg}.\tsc{f}
+            & 3\ac{sg}.\ac{f}
             & German \\
           A & B & C
             & zɨ
             & jä
             & as(ɨr
-            & 1\tsc{sg}
+            & 1\ac{sg}
             & Khinalugh \\
           A & B & A
             & \cellcolor{LG}
@@ -522,7 +518,7 @@ Extern
 
 
 
-\section{A side note on the genitive}
+\section{A side note on the genitive}\label{sec:genitive}
 
 \begin{itemize}
   \item possessive
